# binutils-rust

./: Cargo.toml  Dockerfile  README.md  dependencies_binutils.dot  dependencies_binutils.json  dependencies_gas.dot  dependencies_gas.json  dependencies_gprof.dot  dependencies_gprof.json  dependencies_ld.dot  dependencies_ld.json  diff.py
bfd/: Cargo.toml  lib.rs
bfd/src/: archive.rs  archive64.rs  archures.rs  bfd.rs  bfdio.rs  binary.rs  cache.rs  coff_bfd.rs  coffgen.rs  cofflink.rs  compress.rs  corefile.rs  cpu_i386.rs  cpu_iamcu.rs  cpu_k1om.rs  cpu_l1om.rs  dwarf1.rs  dwarf2.rs  elf.rs  elf32.rs  elf32_gen.rs  elf32_i386.rs  elf64.rs  elf64_gen.rs  elf64_x86_64.rs  elf_attrs.rs  elf_eh_frame.rs  elf_ifunc.rs  elf_properties.rs  elf_strtab.rs  elf_vxworks.rs  elflink.rs  elfxx_x86.rs  format.rs  hash.rs  ihex.rs  init.rs  libbfd.rs  linker.rs  merge.rs  (+18 more)
binutils/: Cargo.toml  addr2line.rs  ar.rs  bfdtest1.rs  bfdtest2.rs  cxxfilt.rs  elfedit.rs  gentestdlls.rs  nm.rs  objcopy.rs  objdump.rs  readelf.rs  size.rs  strings.rs  sysinfo.rs
binutils/src/: arlex.rs  arparse.rs  arsup.rs  binemul.rs  bucomm.rs  debug.rs  dwarf.rs  elfcomm.rs  emul_vanilla.rs  filemode.rs  is_ranlib.rs  is_strip.rs  not_ranlib.rs  not_strip.rs  prdbg.rs  rdcoff.rs  rddbg.rs  rename.rs  stabs.rs  syslex_wrap.rs  unwind_ia64.rs  version.rs  wrstabs.rs
gas/: Cargo.toml  as.rs  build.rs
gas/src/: app.rs  atof_generic.rs  compress_debug.rs  cond.rs  depend.rs  dw2gencfi.rs  dwarf2dbg.rs  ecoff.rs  ehopt.rs  expr.rs  flonum_copy.rs  flonum_konst.rs  flonum_mult.rs  frags.rs  hash.rs  input_file.rs  input_scrub.rs  listing.rs  macro.rs  messages.rs  output_file.rs  read.rs  remap.rs  sb.rs  stabs.rs  subsegs.rs  symbols.rs  write.rs
gas/src/config/: atof_ieee.rs  obj_elf.rs  tc_i386.rs
gprof/: Cargo.toml  gprof.rs
gprof/src/: aarch64.rs  alpha.rs  basic_blocks.rs  bsd_callg_bl.rs  call_graph.rs  cg_arcs.rs  cg_dfn.rs  hertz.rs  (+15 more)
ld/: Cargo.toml  ldmain.rs
ld/src/: deffilep.rs  eelf32_x86_64.rs  eelf_i386.rs  eelf_iamcu.rs  eelf_k1om.rs  eelf_l1om.rs  eelf_x86_64.rs  ei386pe.rs  ei386pep.rs  ldbuildid.rs  ldcref.rs  ldctor.rs  ldelf.rs  ldelfgen.rs  ldemul.rs  ldexp.rs  ldfile.rs  ldgram.rs  ldlang.rs  ldlex_wrapper.rs  ldmisc.rs  ldver.rs  ldwrite.rs  lexsup.rs  mri.rs  pe_dll.rs  pep_dll.rs  plugin.rs
ld/src/_libs/: libdep_plugin.rs
libctf/: Cargo.toml  lib.rs
libctf/src/: ctf_archive.rs  ctf_create.rs  ctf_decl.rs  ctf_dedup.rs  ctf_dump.rs  ctf_error.rs  ctf_hash.rs  ctf_labels.rs  ctf_link.rs  ctf_lookup.rs  ctf_open.rs  ctf_open_bfd.rs  ctf_serialize.rs  ctf_sha1.rs  ctf_string.rs  ctf_subr.rs  ctf_types.rs  ctf_util.rs
libiberty/: Cargo.toml  lib.rs
zlib/: Cargo.toml  lib.rs
(+78 files in other folders)
