[workspace]
members = []

[package]
name = "bfd-sys"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "bfd_sys"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
c2rust-bitfields = "0.3"
f128 = "0.2.9"
libc = "0.2"
zlib-sys = { version = "0.0.0", path = "../zlib" }
