[package]
name = "gas"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false


[[bin]]
path = "as.rs"
name = "as"
[dependencies]
bfd-sys = { version = "0.0.0", path = "../bfd" }
c2rust-bitfields= "0.3"
libc= "0.2"
libctf-sys = { version = "0.0.0", path = "../libctf" }
libiberty-sys = { version = "0.0.0", path = "../libiberty" }
zlib-sys = { version = "0.0.0", path = "../zlib" }
