[package]
name = "libctf-sys"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "libctf_sys"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
c2rust-bitfields = "0.3"
libc = "0.2"
zlib-sys = { version = "0.0.0", path = "../zlib" }
